lenet lab copy and start traffic sign classifier

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,8 +38,8 @@
     "\n",
     "# TODO: Fill this in based on where you saved the training and testing data\n",
     "\n",
-    "training_file = ?\n",
-    "testing_file = ?\n",
+    "training_file = 'train.p'\n",
+    "testing_file = 'test.p'\n",
     "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
@@ -70,25 +70,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples = 39209\n",
+      "Number of testing examples = 12630\n",
+      "Image data shape = (32, 32)\n",
+      "Number of classes = 43\n"
+     ]
+    }
+   ],
    "source": [
     "### Replace each question mark with the appropriate value.\n",
     "\n",
     "# TODO: Number of training examples\n",
-    "n_train = ?\n",
+    "n_train = X_train.shape[0]\n",
     "\n",
     "# TODO: Number of testing examples.\n",
-    "n_test = ?\n",
+    "n_test = X_test.shape[0]\n",
     "\n",
     "# TODO: What's the shape of an traffic sign image?\n",
-    "image_shape = ?\n",
+    "image_shape = (X_train.shape[1], X_train.shape[2])\n",
     "\n",
     "# TODO: How many unique classes/labels there are in the dataset.\n",
-    "n_classes = ?\n",
+    "n_classes = max(y_train) + 1\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
     "print(\"Number of testing examples =\", n_test)\n",
@@ -109,9 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -120,6 +131,38 @@
     "import matplotlib.pyplot as plt\n",
     "# Visualizations will be shown in the notebook.\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7f65671b40b8>]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAhIAAAFkCAYAAAB1rtL+AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAAIABJREFUeJzt3XmQXWWZ+PHvA5qERGhkMUERZcgMgyLB7ghkFAjIEHBG\nFBewhUGdEkYdfuV0zYxAaQGKNQ5YGmYBisESF7Qt1GEZDCAiOLIF7WZYE/ZFzALi0MEESHfy/v44\ntye3m+5O3+Xcc5fvp+rWzX3Puec8b5+b20+/24mUEpIkSdXYpugAJElS6zKRkCRJVTORkCRJVTOR\nkCRJVTORkCRJVTORkCRJVTORkCRJVTORkCRJVTORkCRJVTORkCRJVaspkYiI0yNic0R8vazs0lJZ\n+WNZ7aFKkqRm86pq3xgR7wBOAe6eYPO1wMeBKL1+udrzSJKk5lVVi0REvAa4DPgk8PwEu7ycUno2\npfRM6TFUS5CSJKk5Vdu1cQHwXymln0+yfXFErI2IlRFxYUTsVOV5JElSE6u4ayMiPgLsDyycZJdr\ngR8DjwN7AV8BlkXEojTBPcsjYmdgCfAE8FKl8UiS1MFmAW8Grk8pPVdEABUlEhGxO3A+cERKaXii\nfVJKl5e9vD8i7gUeBRYDN03wliXA9yqJQ5IkjXEC8P0iTlxpi0QPsCswGBGjAym3BQ6JiFOBmeNb\nHVJKj0fE74D5TJxIPAFw2WWXsc8++1QYTmvp6+tj6dKlRYfREJ1SV+vZXqxne+mEeq5YsYITTzwR\nSr9Li1BpIvEz4G3jyr4FrAD+eZKui92BnYHVkxzzJYB99tmH7u7uCsNpLV1dXW1fx1GdUlfr2V6s\nZ3vplHqWFDY0oKJEIqW0HnigvCwi1gPPpZRWRMQc4CyyMRJryFohzgUeAq6vS8SSJKlpVL2ORJny\nVohNwH7AScCOwCqyBOLMycZUSJKk1lVzIpFSOrzs3y8BR9V6TEmS1Bq810YD9fb2Fh1Cw3RKXa1n\ne7Ge7aVT6lm0mGB8ZGMDiOgGBgYGBjppUIwkSTUbHBykp6cHoCelNFhEDLZISJKkqplISJKkqplI\nSJKkqplISJKkqplISJKkqplISJKkqplISJKkqplISJKkqplISJKkqplISJKkqplISJKkqplISJKk\nqtV8G3FJklQfQ0Nwzjnw4ovZ6z32gNNOKzamrTGRkCSpSdxxB3zta/DWt8KMGVli0exMJCRJahLD\nw9nzDTfAbrsVG8t0OUZCkqQmMTKSPb/61cXGUQkTCUmSmsRoIvGqFuovMJGQJKlJjHZtmEhIkqSK\ntWLXRgvlPJIktZ/Nm+Ezn4FVq+Cpp7KyVmqRaKFQJUlqP88/DxdfDAsXZutGHHYYbNNC/QU1hRoR\np0fE5oj4+rjyL0XEqojYEBE3RMT82sKUJKk9jXZnnHkmXH01LF0KEcXGVImqE4mIeAdwCnD3uPLT\ngFNL2w4A1gPXR8SMGuKUJKktteIAy3JVJRIR8RrgMuCTwPPjNn8WOCeldE1K6T7gJOD1wPtrCVSS\npHbUilM+y1XbInEB8F8ppZ+XF0bEnsA84MbRspTSOmA5sKjaICVJaletnkhUHHZEfATYH1g4weZ5\nQALWjitfW9omSZLKjHZttNKUz3IVJRIRsTtwPnBESmk4n5AkSWpfq1bBccfBhg3Z69E7fXZKi0QP\nsCswGPF/Y0q3BQ6JiFOBPwUCmMvYVom5wF1THbivr4+urq4xZb29vfT29lYYoiRJzWvlSrj1Vjjx\nRNhhh6zsmGNgwYKp39ff309/f/+YsqEmuD1opJSmv3PEHOBN44q/BawA/jmltCIiVgFfTSktLb1n\nB7Kk4qSU0g8nOGY3MDAwMEB3d3d1tZAkqUX89KewZAk8+WS2bkQtBgcH6enpAehJKQ3WI75KVdQi\nkVJaDzxQXhYR64HnUkorSkXnA1+IiEeAJ4BzgKeBq2qOVpKkFtfqYyLGq0ePzJgmjZTSeRExG7gY\n2BH4JXB0SmljHc4lSVJLa/VZGuPVXI2U0uETlJ0NnF3rsSVJajftlki00GrekiS1vla8w+dU2iQf\nkiSpeZ12Gnzzm9m/X3opezaRkCRJ03LnnfCGN8Dxx2ev99gDZs4sNqZ6MZGQJClnIyOw//5wxhlF\nR1J/jpGQJClnw8PtM7hyPBMJSZJyNjJiIiFJkqo0MtI+gyvHa9P8SJKk6UsJNua4bOLGje3bItGm\n1ZIkafo++EG44op8z3HssfkevygmEpKkjvfYY3DEEfCxj+Vz/Ag48sh8jl00EwlJUscbHoa3vjW7\ntbcq42BLSVLHa+fBkHkzkZAkdbx2np6ZNxMJSVLHa+cFo/Lmj02S1LFWrYING7Ibadm1UR0TCUlS\nR7rnHliwYMvr7bcvLpZWZiIhSepIv/td9vy978Huu8MBBxQbT6sykZAkdaSRkez5Xe/Kbuut6jjY\nUpLUkUYTCQdZ1sZEQpLUkUwk6sNEQpLUkUYTCWdr1MY8TJLUEdasgZUrt7y+++7s2RaJ2vjjkyR1\nhBNPhBtvHFs2Zw7MmlVMPO3CREKS1BHWrYPjj4cvf3lL2Wtfa9dGrSoaIxERn4qIuyNiqPS4LSKO\nKtt+aURsHvdYVv+wJUmqzPAw7LwzzJ+/5bHzzkVH1foqbZH4DXAa8DAQwMeBqyJi/5TSitI+15bK\no/T65drDlCSpNt7hMx8VJRIppZ+MK/pCRHwaOAgYTSReTik9W4/gJEmqF+/wmY+qp39GxDYR8RFg\nNnBb2abFEbE2IlZGxIURsVPNUUqSVCPv8JmPin+kEbEvcDswC3gBODal9GBp87XAj4HHgb2ArwDL\nImJRSinVJ2RJUid7+GFYvrzy9w0N2bWRh2pys5XAAqAL+BDwnYg4JKW0MqV0edl+90fEvcCjwGLg\npqkO2tfXR1dX15iy3t5eent7qwhRktSu/u7vYFmVw/j33LO+sTRSf38//f39Y8qGhoYKimaLqLWh\nICJuAB5JKX16ku3PAJ9PKV0yyfZuYGBgYIDu7u6aYpEktb/DDoO5c+Hb367sfREwY0Y+MRVlcHCQ\nnp4egJ6U0mARMdSjt2gbYOZEGyJid2BnYHUdziNJEiMjMHNm9lDxKkokIuKfyMZBPAVsD5wAHAoc\nGRFzgLPIxkisAeYD5wIPAdfXMWZJUgdz9kVzqfRSvA74NrAbMATcAxyZUvp5RMwC9gNOAnYEVpEl\nEGemlIbrF7IkqZOZSDSXSteR+OQU214CjppsuyRJ9eDCUs3FnE6S1LRWrIArrxxbtnq1LRLNxEsh\nSWpaS5fCN7+Z3VxrVAS8/e3FxaSxTCQkSU1r40ZYtAh++cuiI9Fkql4iW5KkvLmsdfMzkZAkNS0H\nVjY/EwlJUtNyqmfzM5GQJDUtuzaan5dHklSY22+Hyy6bfPvdd8PChY2LR5UzkZAkFeY//gMuvxz2\n3nvi7TvvDEuWNDYmVcZEQpJUmOHhrMXhF78oOhJVyzESkqTCOCuj9ZlISJIK46yM1mciIUkqjLMy\nWp+JhCSpMHZttD4TCUlSQ61YAR/4ABxzDPzqV7ZItDoTCUlSQ91005Zbgx90EPT2FhuPamMeKElq\nqJER2G47uPrqoiNRPdgiIUlqKAdYthcTCUlSQznls72YSEiSGspEor2YSEiSGmp42Cmf7cScUJJU\nNzffDP/wD7B58+T7rFoFs2Y1LCTlzERCklQ3t94KDzwAn/jE1PsdcEBj4lH+KkokIuJTwKeBN5eK\n7ge+lFK6rmyfLwGfBHYEbgU+nVJ6pC7RSpKa2vAw7LQTXHBB0ZGoUSodI/Eb4DSgG+gBfg5cFRH7\nAETEacCpwCnAAcB64PqImFG3iCVJTcslrztPRYlESuknKaXrUkqPppQeSSl9AfgDcFBpl88C56SU\nrkkp3QecBLweeH9do5YkNSVnZHSeqmdtRMQ2EfERYDZwW0TsCcwDbhzdJ6W0DlgOLKo1UElS83Ox\nqc5T8eWOiH2B24FZwAvAsSmlByNiEZCAtePespYswZAktTm7NjpPNXnjSmAB0AV8CPhORBxS16gk\nSU3vzDPhoovGlr3wAuy7bzHxqBgVJxIppRHgsdLLuyLiALKxEecBAcxlbKvEXOCurR23r6+Prq6u\nMWW9vb30els4SWpKd94Jc+fCCSeMLV9kZ3Yu+vv76e/vH1M2NDRUUDRbREqptgNE3Ag8mVL664hY\nBXw1pbS0tG0HsqTipJTSDyd5fzcwMDAwQHd3d02xSJIa54gjYJdd4Ac/KDqSzjU4OEhPTw9AT0pp\nsIgYKl1H4p+Aa4GngO2BE4BDgSNLu5wPfCEiHgGeAM4BngauqlO8kqQm4QwNQeVdG68Dvg3sBgwB\n9wBHppR+DpBSOi8iZgMXky1I9Uvg6JTSxvqFLElqBiYSggoTiZTSJ6exz9nA2VXGI0lqEc7QEHiv\nDUlSBTZvztaKANi40RYJeRtxSVIFjj46u3PnrFlw110we3bREalo5pKSpGl77DH4y7+E44/PXv/5\nnxcbj4pnIiFJmrbhYViwAE48sehI1Czs2pAkTZszNTSeiYQkadqcqaHxTCQkSdPm3T01nh8HSdIr\nPPMMrFv3ynKnfGo8Pw6SpDGeew5e/3rYtGni7Tvs0Nh41NxMJCRJYzz/fJZELF0K++8/dtu228KB\nBxYTl5qTiYQkaYyRkex54UJ417uKjUXNz8GWkqQxRpfAdiyEpsNEQpI0xmiLhImEpsNEQpI0homE\nKuHHRJIEwOOPw5NPwgMPZK9NJDQdfkwkSQAcfjg88UT27wjYaadCw1GLsGtDkgRkC1D94z/Cww/D\n6tXZWhLS1tgiIUkCstka8+bB/PlFR6JWYouEJAnwhlyqjomEJAnwFuGqjomEJImUvLOnquNHRpI6\nyK9/DStXvrJ88+bs2a4NVcpEQpI6yHHHZetFTGSbbWCPPRobj1qfXRuS1EE2bIAzz4SXXpr4cfjh\nRUeoVlNRIhERZ0TEnRGxLiLWRsQVEfEn4/a5NCI2j3ssq2/YkqRqjIzAdtvBzJmvfNitoWpU2iJx\nMPBvwIHAEcCrgZ9GxHbj9rsWmAvMKz16a4xTklQHDqhUvVX0cUopvaf8dUR8HHgG6AFuKdv0ckrp\n2ZqjkyTVlVM8VW+1jpHYEUjA78eVLy51fayMiAsjwhXbJakJuOiU6q3qvDQiAjgfuCWl9EDZpmuB\nHwOPA3sBXwGWRcSilFKqJVhJ6lQvvACXXAIvv1zbcezaUL3V8nG6EHgL8M7ywpTS5WUv74+Ie4FH\ngcXATZMdrK+vj66urjFlvb299PY6vEKSbrgB/v7vsztyblNDW/LcufCWt9QvLjVOf38//f39Y8qG\nhoYKimaLqKaRICL+HXgvcHBK6alp7P8M8PmU0iUTbOsGBgYGBuju7q44FknqBD/4AfT2Zi0Tr3lN\n0dGoWQwODtLT0wPQk1IaLCKGilskSknE+4BDp5lE7A7sDKyuPDxJEmRdEmC3hJpPpetIXAicAHwU\nWB8Rc0uPWaXtcyLivIg4MCLeFBHvBq4EHgKur3fwktQpRkayZwdKqtlU2tP2KWAH4GZgVdnjuNL2\nTcB+wFXAg8AlwK+AQ1JKw3WIV5I60mgiUcv4CCkPla4jMeVHOKX0EnBUTRFJkl5hdLZFRNGRSGPZ\n2yZJTerhh+Ff/zW7M+c999itoeZkIiFJTerHP4aLLoL99stef/jDxcYjTcREQpKa1MgI7LILDBYy\nqU+aHoftSFKTGh62O0PNz0RCkpqUN9hSKzCRkKQmZSKhVmAiIUlNyjt1qhWY60pSwR56CE4/fcui\nU6Puu8/7aqj52SIhSQW7+Wa44opXlu+7L5x8csPDkSpii4QkFWxkBGbMgKuvLjoSqXK2SEhSwUaX\nv5ZakYmEJBXMQZVqZSYSklQwp3mqlZlISFLB7NpQK/OjK0kNdvLJMDCw5fXq1XZtqHWZSEhSg/3o\nR7DPPvD2t28pW7iwuHikWphISFKDDQ9ntwTv6ys6Eql2jpGQpAZzlobaiYmEJDWYszTUTkwkJKmB\nUoJNm0wk1D5MJCSpgUZvzGXXhtqFiYQk5ayvD3bdNXvstltWNmNGsTFJ9WLjmiTlbPly2GMP+NCH\nstczZsDRRxcbk1QvFSUSEXEGcCzwp8CLwG3AaSmlh8bt9yXgk8COwK3Ap1NKj9QlYklqMSMj0NMD\nZ5xRdCRS/VXatXEw8G/AgcARwKuBn0bEdqM7RMRpwKnAKcABwHrg+oiwIU9SR3IJbLWzij7aKaX3\nlL+OiI8DzwA9wC2l4s8C56SUrintcxKwFng/cHmN8UpSy3G6p9pZrYMtdwQS8HuAiNgTmAfcOLpD\nSmkdsBxYVOO5JKkluQCV2lnVOXJEBHA+cEtK6YFS8TyyxGLtuN3XlrZJUtvbvDnrzhi1caMtEmpf\ntXy0LwTeAryzTrFIUltYsADuu29s2ezZxcQi5a2qRCIi/h14D3BwSml12aY1QABzGdsqMRe4a6pj\n9vX10dXVNaast7eX3t7eakKUpMI89hiceCIsWZK9joCjjio2JrW+/v5++vv7x5QNDQ0VFM0WkVKq\n7A1ZEvE+4NCU0mMTbF8FfDWltLT0egeypOKklNIPJ9i/GxgYGBigu7u7iipIUnOZMQPOPx8+85mi\nI1G7GxwcpKenB6AnpTRYRAyVriNxIdALHAOsj4i5pU1DKaWXSv8+H/hCRDwCPAGcAzwNXFWXiCWp\nyTm4Up2k0q6NT5ENprx5XPkngO8ApJTOi4jZwMVkszp+CRydUtpYW6iS1Pw2b85uzOXgSnWKSteR\nmNZ00ZTS2cDZVcQjSS1tdLaGiYQ6hR91SaqDlODJJ2Hduuy1XRvqFN79U5Lq4IorYM89s6mfANtv\nX2w8UqPYIiFJdfDss7DNNnDjjTBzJhxwQNERSY1hIiFJdTA6U2Px4qIjkRrLrg1JqgPv8KlOZSIh\nSXXgHT7VqUwkJKkOXIRKncr8WZLKbNoEy5dnd+ysxMMP2yKhzuTHXpLKLFsGxxxT3Xv33be+sUit\nwERCksqMLih1770wa1Zl733d6+ofj9TsTCQkqczISPa8996OeZCmw8GWklRmNJFwvIM0PSYSklRm\neBi23RYiio5Eag0mEpJUxvUgpMr430VS29q0Ca66CjZsmP577rjDsRFSJUwkJLWtO++ED36w8vft\nt1/9Y5HalYmEpLY12hKxYkV2i+/pskVCmj4TCUlta3QGxpw52a29JdWfgy0lta3h4ezZwZNSfkwk\nJLUt14SQ8mciIaltjSYSjnmQ8mOeLqktpASXXALPPbel7J57smdbJKT8+N9LUlt46in4m7+BHXaA\nGTO2lHd3w3bbFReX1O5MJCS1hY0bs+err4ZDDy02FqmTVDxGIiIOjoirI+K3EbE5Io4Zt/3SUnn5\nY1n9QpakV3KGhlSMagZbzgH+B/gMkCbZ51pgLjCv9OitKjpJmiYHVkrFqDh3TyldB1wHEDHp/fFe\nTik9W0tgklQJp3pKxchr+ufiiFgbESsj4sKI2Cmn80gSYNeGVJQ8/stdC/wYeBzYC/gKsCwiFqWU\nJusKkaStevRR+Jd/ye7qOd7q1dmzXRtSY9U9kUgpXV728v6IuBd4FFgM3DTZ+/r6+ujq6hpT1tvb\nS2+vwyskZa64Ai64ABYsmHj7YYfBG9/Y2JikRunv76e/v39M2dDQUEHRbJF7I2BK6fGI+B0wnykS\niaVLl9Ld3Z13OJJa2PAwvPa1MDhYdCRS4030x/Xg4CA9PT0FRZTJfYnsiNgd2BlYnfe5JLW3kRG7\nLqRmU3GLRETMIWtdGJ2x8UcRsQD4felxFtkYiTWl/c4FHgKur0fAkjrXyIiDKaVmU81/yYVkXRSp\n9PhaqfzbZGtL7AecBOwIrCJLIM5MKQ3XHK2kjjY8bCIhNZtq1pH4BVN3iRxVfTiSNDm7NqTmY24v\nqSncdhuce252F8/J3H8/zJzZuJgkbV3ugy0laTquuQZuuGHqfd76VjjllMbEI2l6bJGQ1BRGRmD3\n3bO7d0pqHbZISGoKDqSUWpOJhKSm4EBKqTWZSEhqCq4RIbUmEwlJTcGuDak1+d9W0lZ997uwdGm+\n53jySdhnn3zPIan+TCQkbdUNN8CaNXDssfmdY9EiOPLI/I4vKR8mEpK2ang4ay244IKiI5HUbBwj\nIWmrHAgpaTImEpK2yqmZkiZjIiFpq5xRIWkyJhKStsquDUmT8atBanGbNsE73gG/+U1+53j+efjw\nh/M7vqTWZSIhtbgNG+Cuu+AjH4H99svvPH/xF/kdW1LrMpGQWtzISPb8oQ/BBz9YbCySOo9jJKQW\nNzycPTuGQVIRTCSkFjfaImEiIakIJhJSixtNJFznQVIR/BtGahIbN0JKlb9v/frs2RYJSUXwq0dq\nAj/9KRx9NGzeXP0xZs+uXzySNF0mElITePLJLIn47nere//s2dlaEpLUaBUnEhFxMPCPQA+wG/D+\nlNLV4/b5EvBJYEfgVuDTKaVHag9Xak/Dw9kYhxNPLDoSSapMNYMt5wD/A3wGeEWPbkScBpwKnAIc\nAKwHro+IGTXEKbU1l6CW1Koq/upKKV0HXAcQETHBLp8FzkkpXVPa5yRgLfB+4PLqQ5Xal3fXlNSq\n6jr9MyL2BOYBN46WpZTWAcuBRfU8l9ROvLumpFZV76+ueWTdHWvHla8tbZNa1osvwm9/m8+x1641\nkZDUmvzqkqbpox+FK6/M7/h77ZXfsSUpL/VOJNYAAcxlbKvEXOCuqd7Y19dHV1fXmLLe3l56e3vr\nHKJUnWefhSVL4PTT8zn+m9+cz3EltYf+/n76+/vHlA0NDRUUzRaRqllKb/TNEZsZN/0zIlYBX00p\nLS293oEsqTgppfTDCY7RDQwMDAzQ3d1ddSxS3g46CPbdF77xjaIjkaTM4OAgPT09AD0ppcEiYqhm\nHYk5wHyylgeAP4qIBcDvU0q/Ac4HvhARjwBPAOcATwNX1SViqSAOiJSkV6rma3EhcBPZoMoEfK1U\n/m3gr1NK50XEbOBisgWpfgkcnVLaWId4pcK41oMkvVI160j8gq1MG00pnQ2cXV1IUnNyrQdJeiX/\nvlJHePppeKTGRdrXrbNFQpLG82tRHeF974PBOgxD2mWX2o8hSe3EREIdYd06OPlk+Nznqj9GBOy5\nZ/1ikqR2YCKhjjAyArvuCvPnFx2JJLWXut5rQ2pWDpSUpHyYSKgjuAaEJOXDREIdwTUgJCkffrWq\n6W3aBFdfDevXV3+MDRvs2pCkPJhIqOkNDMAHPlD7cbwpliTVn4mEmt6GDdnzffdVP+siAmbMqF9M\nkqSMiYSa3shI9jxnDsycWWwskqSxHGyppjc8nD07WFKSmo+JhJreaIuEiYQkNR8TCTW90UTCWReS\n1Hz8G0+5+9GP4OGHq3//vfdmz7ZISFLz8atZufurv4Jtt4Xttqv+GPvvnw22lCQ1FxMJ5W7jRrjo\nIjjllKIjkSTVm2MklKvNm7OH3RKS1J5MJJQrZ1xIUnszkVCuTCQkqb2ZSChXo4tJOXVTktqTfyeq\nri67DG6/fcvrl17Knm2RkKT25Ne76uqLX4R16+ANb9hSdtBB8La3FReTJCk/JhKqq+FhOPlk+PKX\ni45EktQIdR8jERFnRcTmcY8H6n0eNaeREcdDSFInyatF4j7g3UCUXo/kdB41mZERx0NIUifJ6yt/\nJKX0bE7HVhMbHjaRkKROktf0zz+OiN9GxKMRcVlEvDGn86jJ2CIhSZ0lj6/8O4CPAw8CuwFnA/8d\nEfumlNbncD5VYWAAzjknW766nv7wBxMJSeokdf/KTyldX/byvoi4E3gSOA64dLL39fX10dXVNaas\nt7eX3t7eeoco4Lrr4NprYcmS+h73mGPg3e+u7zElSdDf309/f/+YsqGhoYKi2SJSSvmfJEsmbkgp\nfX6Cbd3AwMDAAN3d3bnHoswXvwiXXAJPP110JJKkag0ODtLT0wPQk1IaLCKG3JfIjojXAPOB1Xmf\nS9PnoEhJUj3ksY7EVyPikIh4U0T8GXAFMAz0b+WtaiDXe5Ak1UMef5PuDnwf2Bl4FrgFOCil9FwO\n51KVnF0hSaqHPAZbOjqyBdi1IUmqB3+VNLGf/QxOP73+UzQBfvMbeKOre0iSamQi0cRuuQVWroSP\nfaz+x160CBYvrv9xJUmdxUSiiQ0Pwy67wAUXFB2JJEkTy336p6rnzApJUrMzkWhizqyQJDU7E4km\n5swKSVKzM5FoYnZtSJKanX/v5ujDH4abb67+/S+8APvvX7dwJEmqOxOJHN12GyxYUNvdMN/5zvrF\nI0lSvZlI5GhkBA4/HM44o+hIJEnKh2MkcuRgSUlSuzORyJHTNyVJ7c5EIkcmEpKkdteRv+Y2bcp+\nyefNrg1JUrvruF9zIyPZXS/XrGnM+WbPbsx5JEkqQsclEi++mCURp54KBx6Y77le9Sp473vzPYck\nSUXquERieDh7Puww+MAHio1FkqRW13GDLUfHRjh2QZKk2nVsIuE9LCRJql3HJRKjXRu2SEiSVLum\n+nX6hz/kP5viqaeyZxMJSZJq11S/To84ApYvb8y5tt++MeeRJKmdNVUi8eyz0NsLp5yS73lmz4ae\nnnzPMZH+/n56e3sbf+ICdEpdrWd7sZ7tpVPqWbTcEomI+FvgH4B5wN3A/0sp/Wqq94yMwF57weLF\neUVVrE76UHdKXa1ne7Ge7aVT6lm0XAZbRsTxwNeAs4C3kyUS10fELlO9zyWlJUlqLXnN2ugDLk4p\nfSeltBL4FLAB+Oup3uRNriRJai11TyQi4tVAD3DjaFlKKQE/AxZN9d6REdd3kCSpleTx9/8uwLbA\n2nHla4G9J9h/FsB//ucKNmzIpn8ODuYQVRMYGhpisF0rN06n1NV6thfr2V46oZ4rVqwY/eesomKI\nrLGgjgeM2A34LbAopbS8rPxc4JCU0qJx+38U+F5dg5AkqbOckFL6fhEnzqNF4nfAJmDuuPK5wETL\nTV0PnAA8AbyUQzySJLWrWcCbyX6XFqLuLRIAEXEHsDyl9NnS6wCeAv41pfTVup9QkiQVIq85El8H\nvhURA8Abb5t/AAAGqklEQVSdZLM4ZgPfyul8kiSpALkkEimly0trRnyJrEvjf4AlKaVn8zifJEkq\nRi5dG5IkqTN03G3EJUlS/ZhISJKkqhWeSETE30bE4xHxYkTcERHvKDqmyUTEWRGxedzjgXH7fCki\nVkXEhoi4ISLmj9s+MyIuiIjfRcQLEfGjiHjduH1eGxHfi4ihiPjfiPhGRMzJsV4HR8TVEfHbUp2O\nmWCfhtQrIt4YET+JiPURsSYizouIunxOt1bPiLh0guu7rAXreUZE3BkR6yJibURcERF/MsF+LX1N\np1PPdrimEfGpiLi7dO6hiLgtIo4at09LX8vp1LMdruUk9T69VJevjytvnWuaUirsARxPtnbEScCf\nAhcDvwd2KTKuKeI9C7gH2BV4XemxU9n200rx/yWwL3Al8Cgwo2yfi8jWzDiU7IZmtwG/HHeea4FB\nYCHwZ8BDwGU51usosoGx7yNbA+SYcdsbUi+yxPZesvnQbwOWAM8AX25QPS8FfjLu+naN26cV6rkM\n+Ctgn9LxrynFvF07XdNp1rPlrynwF6XP7l7AfODLwMvAPu1yLadZz5a/lhPU+R3AY8BdwNdb9f9n\nXX8oVfwQ7wD+pex1AE8DnysyriniPQsYnGL7KqCv7PUOwIvAcWWvXwaOLdtnb2AzcEDp9T6l128v\n22cJMALMa0AdN/PKX7ANqRdwNDBMWSIJ/A3wv8CrGlDPS4H/nOI9LVfP0rF3KcX0rja/phPVs12v\n6XPAJ9r1Wk5Sz7a6lsBrgAeBw4GbGJtItNQ1LaxrI2q4uVfB/jiypvFHI+KyiHgjQETsCcxjbH3W\nAcvZUp+FZFNuy/d5kGyxrtF9DgL+N6V0V9k5fwYk4MB8qjS5BtfrIODelNLvyva5HugC3lqnKm3N\n4lIz+cqIuDAidirb1kNr1nPH0vl/D219TcfUs0zbXNOI2CYiPkK2Ls9t7Xotx9ezbFPbXEvgAuC/\nUko/Ly9sxWta5BiJqW7uNa/x4UzLHcDHybK6TwF7Av9d6nOaR3aBpqrPXGBj6UMx2T7zyJqW/k9K\naRPZl2MRP5dG1mveJOeBxtT9WrJutsOBz5E1GS6LiCiLoaXqWYr9fOCWlNLoeJ62u6aT1BPa5JpG\nxL4R8QLZX6EXkv0l+iBtdi2nqCe0ybUEKCVJ+wNnTLC55a5pXitbtqWUUvla5vdFxJ3Ak8BxwMpi\nolK9pJQuL3t5f0TcS9YvuZis6bEVXQi8BXhn0YHkbMJ6ttE1XQksIPtL8UPAdyLikGJDysWE9Uwp\nrWyXaxkRu5MlvUeklIaLjqceimyRqPTmXk0npTRENnhlPlnMwdT1WQPMiIgdtrLP+JG32wI7UczP\npZH1WjPJeaCAuqeUHif7nI6Olm6pekbEvwPvARanlFaXbWqrazpFPV+hVa9pSmkkpfRYSumulNLn\ngbuBz9Jm13KKek60b0teS7IumF2BwYgYjohhstaVz0bERrIWgZa6poUlEqVMbAB492hZqYnq3Yzt\nE2taEfEasg/xqtKHeg1j67MDWV/UaH0GyAa6lO+zN7AHcHup6HZgx4h4e9mp3k32wVpOgzW4XrcD\nb4tsefVRRwJDwJhpto1Q+sthZ2D0l1PL1LP0y/V9wGEppafKt7XTNZ2qnpPs37LXdJxtgJntdC0n\nsQ0wc6INLXwtf0Y2Q2J/staXBcCvgcuABSmlx2i1a1qvEajVPMi6BDYwdvrnc8CuRcY1RbxfBQ4B\n3kQ2leYGsuxx59L2z5Xif2/pg3Il8DBjp+xcCDxO1hzXA9zKK6fsLCP7YL2DrKn2QeC7OdZrDtmH\neX+yUb5/V3r9xkbWi+xL426yvtD9yMairAXOybuepW3nkf1nfRPZf7hfAyuAV7dYPS8kG3V9MNlf\nF6OPWWX7tPw13Vo92+WaAv9UquObyKYCfoXsl8jh7XItt1bPdrmWU9R9/KyNlrqmufxQKvwBfoZs\nLuyLZNnRwqJjmiLWfrLpqS+SjY79PrDnuH3OJpu6s4Fs9Ov8cdtnAv9G1iT3AvBD4HXj9tmRLDsd\nIvuivASYnWO9DiX7xbpp3OObja4X2S/1a4A/lD7Q5wLb5F1PYBZwHdlfAi+Rze2+iHFJbYvUc6I6\nbgJOKuKzmlddt1bPdrmmwDdKsb9YqstPKSUR7XItt1bPdrmWU9T955QlEq12Tb1plyRJqlrhS2RL\nkqTWZSIhSZKqZiIhSZKqZiIhSZKqZiIhSZKqZiIhSZKqZiIhSZKqZiIhSZKqZiIhSZKqZiIhSZKq\nZiIhSZKq9v8BILkWa8l52zIAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f6567248400>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.plot(y_train)"
    ]
   },
   {
@@ -463,6 +506,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
