--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -448,16 +448,17 @@
     "import tensorflow as tf\n",
     "\n",
     "# Hyperparameters\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 5\n",
     "BATCH_SIZE = 128\n",
     "MU = 0\n",
     "SIGMA = 0.1\n",
-    "LEARNING_RATE = .001"
+    "LEARNING_RATE = .001\n",
+    "KEEP_PROB = 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -471,53 +472,36 @@
     "    padding = 'VALID'\n",
     "    return tf.nn.max_pool(input_layer, ksize, strides, padding)\n",
     "    \n",
-    "def conv_layer(input_layer, filter_shape, mu=MU, sigma=SIGMA):\n",
-    "    weights = tf.Variable(tf.truncated_normal(filter_shape, mean=mu, stddev=sigma))\n",
+    "def conv_layer(input_layer, filter_shape):\n",
+    "    weights = tf.Variable(tf.truncated_normal(filter_shape, mean=MU, stddev=SIGMA))\n",
     "    biases = tf.Variable(tf.zeros(filter_shape[3]))\n",
     "    strides = [1,1,1,1]\n",
     "    padding = 'VALID'\n",
     "    return tf.nn.conv2d(input_layer, weights, strides, padding) + biases\n",
     "\n",
-    "def fully_connected_layer(input_layer, shape, mu=MU, sigma=SIGMA):\n",
-    "    weights = tf.Variable(tf.truncated_normal(shape, mean=mu, stddev=sigma))\n",
+    "def fully_connected_layer(input_layer, shape):\n",
+    "    weights = tf.Variable(tf.truncated_normal(shape, mean=MU, stddev=SIGMA))\n",
     "    biases = tf.Variable(tf.zeros(shape[1]))\n",
     "    return tf.matmul(input_layer, weights) + biases\n",
     "    \n",
     "def LeNet(x): \n",
     "    # TODO: Layer 1: Convolutional. Input = 32x32x3. Output = 28x28x6.\n",
     "    conv1 = conv_layer(x, [5,5,3,6])\n",
-    "    \n",
-    "    # TODO: Activation.\n",
     "    conv1_activated = tf.nn.relu(conv1)\n",
-    "    \n",
-    "    # TODO: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
     "    conv1_pooled = maxpool(conv1_activated)\n",
     "    \n",
-    "    # TODO: Layer 2: Convolutional. Output = 10x10x16\n",
     "    conv2 = conv_layer(conv1_pooled, [5,5,6,16])\n",
-    "    \n",
-    "    # TODO: Activation.\n",
     "    conv2_activated = tf.nn.relu(conv2)\n",
-    "\n",
-    "    # TODO: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
     "    conv2_pooled = maxpool(conv2_activated)\n",
-    "\n",
-    "    # TODO: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    \n",
     "    layer3_input = flatten(conv2_pooled)\n",
-    "    \n",
-    "    # TODO: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
     "    layer3_output = fully_connected_layer(layer3_input, (400, 120))\n",
-    "    \n",
-    "    # TODO: Activation.\n",
     "    layer3_activated = tf.nn.relu(layer3_output)\n",
-    "\n",
-    "    # TODO: Layer 4: Fully Connected. Input = 120. Output = 84\n",
-    "    layer4_output = fully_connected_layer(layer3_activated, (120, 84))\n",
+    "    layer3_dropped = tf.nn.dropout(layer3_activated, KEEP_PROB)\n",
     "    \n",
-    "    # TODO: Activation.\n",
+    "    layer4_output = fully_connected_layer(layer3_dropped, (120, 84))\n",
     "    layer4_activated = tf.nn.relu(layer4_output)\n",
-    "\n",
-    "    # TODO: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    \n",
     "    logits = fully_connected_layer(layer4_activated, (84, 43))\n",
     "    \n",
     "    return logits"
@@ -525,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -538,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -553,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -576,9 +560,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -588,36 +573,17 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.612\n",
+      "Validation Accuracy = 0.380\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.785\n",
+      "Validation Accuracy = 0.556\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.819\n",
+      "Validation Accuracy = 0.628\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.857\n",
-      "\n",
-      "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.862\n",
-      "\n",
-      "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.881\n",
-      "\n",
-      "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.872\n",
-      "\n",
-      "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.871\n",
-      "\n",
-      "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.877\n",
-      "\n",
-      "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.881\n",
-      "\n",
-      "Model saved\n"
+      "Validation Accuracy = 0.676\n",
+      "\n"
      ]
     }
    ],
