--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -48,12 +48,19 @@
     "    'evaluate_test_accuracy': False\n",
     "}\n",
     "\n",
-    "# HyperParameters for Training"
+    "# HyperParameters for Training\n",
+    "EPOCHS = 20\n",
+    "BATCH_SIZE = 128\n",
+    "MU = 0\n",
+    "SIGMA = 0.1\n",
+    "LEARNING_RATE = .001\n",
+    "CONV_KEEP_PROB = 1\n",
+    "KEEP_PROB = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -66,6 +73,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
+    "import sklearn\n",
     "%matplotlib inline"
    ]
   },
@@ -301,7 +309,22 @@
     "    for image in images:\n",
     "        converted.append(cv2.cvtColor(image, cv2.COLOR_RGB2GRAY))\n",
     "    return np.array(converted)\n",
-    "\n"
+    "\n",
+    "if flags['generate_grayscale_images']:\n",
+    "    train_grayscale = grayscale(X_train)\n",
+    "    test_grayscale  = grayscale(X_test)\n",
+    "    train_data = {\n",
+    "        'features': train_grayscale, \n",
+    "        'labels': y_train\n",
+    "    }\n",
+    "    test_data = {\n",
+    "        'features': test_grayscale,\n",
+    "        'labels': y_test\n",
+    "    }\n",
+    "    with open('train_grayscale.p' ,'wb') as f:\n",
+    "        pickle.dump(train_data, f)\n",
+    "    with open('test_grayscale.p', 'wb') as f:\n",
+    "        pickle.dump(test_data, f)"
    ]
   },
   {
@@ -328,13 +351,12 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.utils import shuffle\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X_train, y_train = shuffle(X_train, y_train)\n",
+    "X_train, y_train = sklearn.utils.shuffle(X_train, y_train)\n",
     "\n",
     "# Split test data set into half validation, half test\n",
-    "X_validation, X_test, y_validation, y_test = train_test_split(X_test, y_test, test_size=0.5)"
+    "kf = sklearn.model_selection.KFold(n_splits=5)\n",
+    "for sub_train, val in kf.split(X_train):\n",
+    "    X_sub_train, X_val, y_sub_train, y_val = X_train[sub_train], X_train[val], y_train[sub_train], y_train[val]"
    ]
   },
   {
@@ -380,27 +402,6 @@
    "metadata": {},
    "source": [
     "**Answer:**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "\n",
-    "# Hyperparameters\n",
-    "EPOCHS = 20\n",
-    "\n",
-    "BATCH_SIZE = 128\n",
-    "MU = 0\n",
-    "SIGMA = 0.1\n",
-    "LEARNING_RATE = .001\n",
-    "CONV_KEEP_PROB = 1\n",
-    "KEEP_PROB = 1"
    ]
   },
   {
@@ -457,50 +458,7 @@
     "    \n",
     "    logits = fully_connected_layer(fc2_dropped, (250, 43))\n",
     "    \n",
-    "    return logits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
-    "y = tf.placeholder(tf.int32, (None))\n",
-    "keep_prob = tf.placeholder(tf.float32)\n",
-    "conv_keep_prob = tf.placeholder(tf.float32)\n",
-    "one_hot_y = tf.one_hot(y, 43)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "logits = LeNet(x, keep_prob, conv_keep_prob)\n",
-    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits, one_hot_y)\n",
-    "loss_operation = tf.reduce_mean(cross_entropy)\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate = LEARNING_RATE)\n",
-    "training_operation = optimizer.minimize(loss_operation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
-    "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
-    "saver = tf.train.Saver()\n",
+    "    return logits\n",
     "\n",
     "def evaluate(X_data, y_data):\n",
     "    num_examples = len(X_data)\n",
@@ -510,7 +468,25 @@
     "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
     "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: 1, conv_keep_prob: 1})\n",
     "        total_accuracy += (accuracy * len(batch_x))\n",
-    "    return total_accuracy / num_examples"
+    "    return total_accuracy / num_examples\n",
+    "\n",
+    "# Setup Variables\n",
+    "x = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
+    "y = tf.placeholder(tf.int32, (None))\n",
+    "keep_prob = tf.placeholder(tf.float32)\n",
+    "conv_keep_prob = tf.placeholder(tf.float32)\n",
+    "one_hot_y = tf.one_hot(y, 43)\n",
+    "\n",
+    "# Training Network\n",
+    "logits = LeNet(x, keep_prob, conv_keep_prob)\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits, one_hot_y)\n",
+    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = LEARNING_RATE)\n",
+    "training_operation = optimizer.minimize(loss_operation)\n",
+    "\n",
+    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
+    "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "saver = tf.train.Saver()"
    ]
   },
   {
@@ -531,30 +507,32 @@
     }
    ],
    "source": [
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "    num_examples = len(X_train_aug)\n",
-    "    \n",
-    "    print(\"Training...\")\n",
-    "    print()\n",
-    "    for i in range(EPOCHS):\n",
-    "        X_train, y_train = shuffle(X_train, y_train)\n",
-    "        for offset in range(0, num_examples, BATCH_SIZE):\n",
-    "            end = offset + BATCH_SIZE\n",
-    "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
-    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: KEEP_PROB, conv_keep_prob: CONV_KEEP_PROB})\n",
-    "          \n",
-    "        train_accuracy = evaluate(X_train, y_train)\n",
-    "        aug_accuracy = evaluate(X_train_aug, y_train_aug)\n",
-    "        validation_accuracy = evaluate(X_validation, y_validation)\n",
-    "        print(\"EPOCH {} ...\".format(i+1))\n",
-    "        print(\"Train Accuracy = {:.3f}\".format(train_accuracy))\n",
-    "        print(\"Augmented Train Accuracy = {:.3f}\".format(aug_accuracy))\n",
-    "        print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
+    "if flags['train_network']: \n",
+    "    with tf.Session() as sess:\n",
+    "        sess.run(tf.global_variables_initializer())\n",
+    "        num_examples = len(X_train)\n",
+    "\n",
+    "        print(\"Training...\")\n",
     "        print()\n",
-    "        \n",
-    "    saver.save(sess, 'lenet')\n",
-    "    print(\"Model saved\")"
+    "        for i in range(EPOCHS):\n",
+    "            X_train, y_train = shuffle(X_train, y_train)\n",
+    "            kf = sklearn.model_selection.StratifiedKFold(n_splits=5)\n",
+    "            for sub_train, val in kf.split(X_train):\n",
+    "                X_sub_train, X_val, y_sub_train, y_val = X_train[sub_train], X_train[val], y_train[sub_train], y_train[val]\n",
+    "                for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "                    end = offset + BATCH_SIZE\n",
+    "                    batch_x, batch_y = X_sub_train[offset:end], y_sub_train[offset:end]\n",
+    "                    sess.run(training_operation, feed_dict={x: batch_x, y: batch_y, keep_prob: KEEP_PROB, conv_keep_prob: CONV_KEEP_PROB})\n",
+    "\n",
+    "            train_accuracy = evaluate(X_train, y_train)\n",
+    "            validation_accuracy = evaluate(X_val, y_val)\n",
+    "            print(\"EPOCH {} ...\".format(i+1))\n",
+    "            print(\"Train Accuracy = {:.3f}\".format(train_accuracy))\n",
+    "            print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
+    "            print()\n",
+    "\n",
+    "        saver.save(sess, 'lenet')\n",
+    "        print(\"Model saved\")"
    ]
   },
   {
